<resources>
    <string name="app_name" translatable="false">Forecasting weather</string>
    <string name="todayWeatherForecasting" translatable="false">Today</string>
    <string name="weekWeatherForecasting" translatable="false">5 Days</string>
    <string name="setting" translatable="false">Settings</string>
    <string name="turn_internet" translatable="false">Turn on the Internet</string>
    <string name="city_name" translatable="false">City name</string>
    <string name="time_sunset" translatable="false">Time sunset</string>
    <string name="time_sunrise" translatable="false">Time sunrise</string>
    <string name="pressure" translatable="false">Pressure</string>
    <string name="date" translatable="false">Date</string>
    <string name="wind" translatable="false">Wind</string>
    <string name="humidity" translatable="false">Humidity</string>
    <string name="clouds" translatable="false">Clouds</string>
    <string name="met_sec" translatable="false">m/s</string>
    <string name="hPa" translatable="false">hPa</string>
    <string name="date_update" translatable="false">Update</string>
    <string name="forecasting_week" translatable="false">Forecasting Week</string>
    <string name="failed_location" translatable="false">Could not determine location</string>
    <string name="weather_location" translatable="false">Weather Location</string>
    <string name="use_device_location" translatable="false">Use device location</string>
    <string name="get_your_location" translatable="false">Allow the app to get your location</string>
    <string name="location" translatable="false">Location</string>
    <string name="location_for_displayed" translatable="false">The location for which the weather is displayed</string>
    <string name="language" translatable="false">Language</string>
    <string name="language_system" translatable="false">Language system</string>
    <string name="today" translatable="false">Today</string>
    <string name="tomorrow" translatable="false">Tomorrow</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="enable_location" translatable="false">Enable location, Please!</string>
    <string name="share" translatable="false">Share</string>
    <string name="enable_location_button" translatable="false">Enable geolocation</string>


</resources>
