<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/weather_location"
        >
        <SwitchPreference
            android:key="USE_DEVICE_LOCATION"
            android:title="@string/use_device_location"
            android:summary="@string/get_your_location"
            android:defaultValue="false"
            android:disableDependentsState="true"
            />

        <EditTextPreference
            android:key="CUSTOM_LOCATION"
            android:title="@string/location"
            android:summary="@string/location_for_displayed"
            android:defaultValue="London"
            android:dependency="USE_DEVICE_LOCATION"/>

    </PreferenceCategory>

    <!--
    <PreferenceCategory
        android:title="@string/language"
        >
        <ListPreference
            android:key="LANGUAGE_SYSTEM"
            android:title="@string/language_system"
            android:summary="%s"
            android:defaultValue="ENGLISH"
            android:entries="@array/languageSystemEntries"
            android:entryValues="@array/languageSystemValue"/>



    </PreferenceCategory>-->
</PreferenceScreen>